--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -43,7 +43,7 @@
 					<ul class="nav navbar-nav navbar-right hidden-xs">
 						<li>
 							<?php if($userLogged): ?>
-								<a href="/sign-out"><?=$userUsername?></a>
+								<a href="/sign-out"><?=$username?></a>
 							<?php else: ?>
 								<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
 							<?php endif ?>
