--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -22,18 +22,24 @@ html{
 /*text*/
 *{
 	font-family: "Ubuntu";
+	word-wrap: break-word;
 }
 h1, h2, h3, p{
 	color: #222222;
 }
 h1{
-	font-size: 40px;
+	font-size: 32px;
+	font-weight: bold;
 }
 h2{
-	font-size: 30px;
+	font-size: 22px;
+	font-weight: bold;
 }
 h3{
-	font-size: 20px;
+	font-size: 16px;
+	font-weight: bold;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 p{
 	font-size: 14px;
@@ -203,6 +209,23 @@ p{
 .modal-content{
 	border: 1px solid #dddddd;
 } 
+/*----*/
+
+/*thumbnails*/
+
+.thumbnail{
+	padding: 0px;
+}
+
+/*----*/
+
+/*panels*/
+
+.panel{
+	border: 10px solid #f8f8f8;
+	border-radius: 4px;
+}
+
 /*----*/
 
 header{
@@ -379,3 +402,34 @@ footer{
 		background-size: cover;
 	}
 }
+
+/*----*/
+
+/*profile*/
+.profile-wrapper{
+	#profile-info{
+		max-width: 270px;
+	}
+	.img-wrapper{
+		position: relative;
+	}
+	#edit-img-button{
+		display: none;
+		padding: 0px;
+		color: white;
+		width: 38px;
+		height: 36px;
+		background-color: rgba(0,0,0,0.5);
+		font-size: 32px;
+		line-height: 36px;
+		text-align: center;
+		padding-left: 1px;
+		padding-top: 1px;
+		position: absolute;
+		bottom: 0px;
+		right: 0px; 
+		border: 0px;
+	}
+}
+
+/*----*/
