--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -38,7 +38,7 @@ h2{
 h3{
 	font-size: 16px;
 	font-weight: bold;
-	margin-top: 10px;
+	margin-top: 4px;
 	margin-bottom: 10px;
 }
 p{
@@ -87,6 +87,21 @@ p{
 }
 .btn-info:not(.search-button):hover{
 	background-color: #014450;
+}
+
+.btn-upload{
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+}
+.btn-upload input{
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	cursor: pointer;
+	opacity: 0;
 }
 
 /*----*/
@@ -201,14 +216,19 @@ p{
 /*----*/
 
 /*modal*/
-
+.modal{
+	.form-control{
+		padding: 4px 10px;
+		font-size: 18px;
+	}
+}
 .modal-content{
 	border-radius: 4px;
 }
-
 .modal-content{
 	border: 1px solid #dddddd;
 } 
+
 /*----*/
 
 /*thumbnails*/
@@ -324,10 +344,6 @@ footer{
 	.checkbox{
 		margin: 0px;
 	}
-	.form-control{
-		padding: 4px 10px;
-		font-size: 18px;
-	}
 }
 
 /*----*/
@@ -341,11 +357,13 @@ footer{
 	h2{
 		color: white;
 		font-size: 40px;
-		margin-bottom: 24px; 
+		margin-bottom: 24px;
+		font-weight: normal;
 	}
 	h1{
 		color: white;
 		font-size: 100px;
+		font-weight: normal;
 	}
 	p{
 		color: white;
@@ -410,10 +428,10 @@ footer{
 	#profile-info{
 		max-width: 270px;
 	}
-	.img-wrapper{
+	.img-group{
 		position: relative;
 	}
-	#edit-img-button{
+	.img-button{
 		display: none;
 		padding: 0px;
 		color: white;
@@ -429,6 +447,33 @@ footer{
 		bottom: 0px;
 		right: 0px; 
 		border: 0px;
+	}
+	#img-form-wrapper{
+		display: none;
+		border-bottom: 10px solid #f8f8f8;
+	}
+	.cr-slider-wrap{
+		margin-top: 16px !important;
+	}
+	.croppie-container{
+		padding: 0px !important;
+	}
+	.cr-viewport{
+		border: 0px !important;
+	}
+}
+
+/*----*/
+
+/*authorization-modal*/
+
+#authorization-modal{
+	input{
+		display: inline-block;
+		width: auto;
+	}
+	.form-group{
+		margin-bottom: 0px;
 	}
 }
 
