--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -3,6 +3,7 @@
 <script src="Includes/javascript/avatar-n-cropper.js"></script>
 <div  class="profile-wrapper">
 	<div class="container">
+		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		<h1>Your profile</h1>
 		<div class="row">
 			<div class="col-md-4">
