--- a/html/Includes/styles/style.css
+++ b/html/Includes/styles/style.css
@@ -122,6 +122,9 @@ p {
   .alert-info .close:hover {
     color: #014450; }
 
+.popover.top.alert-danger .arrow:after {
+  border-top-color: #AB2C00; }
+
 /*----*/
 /*inputs*/
 .form-control:not(.search-input) {
@@ -144,13 +147,13 @@ p {
   border: 1px solid #178599;
   /*box-shadow: 0px 0px 4px #046d81 !important;*/ }
 
-.has-error *, .has-error *:focus {
+.has-error input, .has-error input:focus {
   outline: none !important;
   border: 1px solid #D23702 !important;
   box-shadow: none !important;
   /*box-shadow: 0px 0px 4px #D23702 !important;*/ }
 
-.has-success *, .has-success *:focus {
+.has-success input, .has-success input:focus {
   border: 1px solid #c0cf02 !important;
   box-shadow: none !important;
   /*box-shadow: 0px 0px 4px #c0cf02 !important;*/ }
@@ -198,8 +201,78 @@ p {
 /*----*/
 /*panels*/
 .panel {
-  border: 10px solid #f8f8f8;
-  border-radius: 4px; }
+  border-radius: 4px;
+  box-shadow: none; }
+  .panel h2 {
+    margin: 0px; }
+
+.panel-default {
+  border: 10px solid #f0f0f0; }
+  .panel-default .panel-heading {
+    background-color: #f0f0f0;
+    border: 0px;
+    padding-top: 0px;
+    padding-left: 10px; }
+
+/*----*/
+/*dropdowns*/
+.dropdown-menu {
+  box-shadow: none;
+  border: 1px solid #999999;
+  background-color: black; }
+  .dropdown-menu li a {
+    font-size: 16px !important;
+    padding: 10px 10px !important;
+    height: 36px !important;
+    line-height: 16px !important;
+    color: #999999 !important;
+    position: relative; }
+    .dropdown-menu li a span {
+      display: inline-block; }
+    .dropdown-menu li a i {
+      position: absolute;
+      right: 10px;
+      top: middle;
+      float: right; }
+  .dropdown-menu li a:hover {
+    background: black;
+    color: white; }
+  .dropdown-menu .divider {
+    margin: 5px;
+    background: #999999; }
+
+/*----*/
+/*imgs*/
+.img-group {
+  position: relative; }
+  .img-group img {
+    width: 100%; }
+  .img-group .img-button {
+    display: none;
+    padding: 0px;
+    color: white;
+    width: 38px;
+    height: 36px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+    padding-left: 1px;
+    padding-top: 1px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    border: 0px;
+    border-top-left-radius: 4px; }
+
+.cr-slider-wrap {
+  margin-top: 16px !important; }
+
+.croppie-container {
+  padding: 0px !important; }
+
+.cr-viewport {
+  border: 0px !important; }
 
 /*----*/
 header .logo {
@@ -244,9 +317,21 @@ header .navbar-form {
   margin-bottom: 9px; }
 header .nav a {
   color: #999999 !important;
-  font-size: 24px; }
+  font-size: 24px;
+  line-height: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  height: 50px; }
+  header .nav a img {
+    margin-left: 10px;
+    height: 32px;
+    margin-top: -5px;
+    border-radius: 4px; }
 header .nav a:hover {
   color: white !important; }
+header a.dropdown-toggle:hover, header a.dropdown-toggle:focus {
+  background: black !important;
+  color: white; }
 @media screen and (max-width: 767px) {
   header .navbar-form {
     margin: 0px;
@@ -328,8 +413,9 @@ footer {
     .homepage-wrapper #sign-up-form .row {
       height: 54px; }
     .homepage-wrapper #sign-up-form .alert {
-      padding: 6px 10px;
+      padding: 7px 10px;
       margin: 0px;
+      line-height: 21px;
       display: none; }
   @media screen and (max-width: 767px) {
     .homepage-wrapper {
@@ -338,26 +424,6 @@ footer {
 
 /*----*/
 /*profile*/
-.profile-wrapper #profile-info {
-  max-width: 270px; }
-.profile-wrapper .img-group {
-  position: relative; }
-.profile-wrapper .img-button {
-  display: none;
-  padding: 0px;
-  color: white;
-  width: 38px;
-  height: 36px;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-size: 32px;
-  line-height: 36px;
-  text-align: center;
-  padding-left: 1px;
-  padding-top: 1px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  border: 0px; }
 .profile-wrapper #img-form-wrapper {
   display: none;
   border-bottom: 10px solid #f8f8f8; }
@@ -367,14 +433,30 @@ footer {
   padding: 0px !important; }
 .profile-wrapper .cr-viewport {
   border: 0px !important; }
+@media screen and (max-width: 767px) {
+  .profile-wrapper #profile-info {
+    max-width: 320px; } }
 
 /*----*/
 /*authorization-modal*/
-#authorization-modal input {
-  display: inline-block;
-  width: auto; }
 #authorization-modal .form-group {
   margin-bottom: 0px; }
+#authorization-modal p {
+  margin-bottom: 0px;
+  line-height: 35px; }
+
+/*----*/
+/*settings*/
+.settings-wrapper #img-form-wrapper {
+  display: none; }
+.settings-wrapper .form-wrapper .alert {
+  padding: 7px 10px;
+  margin: 0px;
+  line-height: 21px;
+  display: none; }
+@media screen and (max-width: 767px) {
+  .settings-wrapper #avatar-settings {
+    max-width: 320px; } }
 
 /*----*/
 
