--- a/html/Views/miscellaneous/authorization-modal.phtml
+++ b/html/Views/miscellaneous/authorization-modal.phtml
@@ -8,8 +8,11 @@
 			<div class="modal-body">
 				<div class="form-group">
 					<input type="password" class="form-control" name="password" placeholder="password" required>
-					<button class="btn btn-default pull-right" type="submit">Send</button>
 				</div>
+			</div>
+			<div class="modal-footer">
+				<p class="pull-left">You must enter your password to confirm your identity.</p>
+				<button class="btn btn-success pull-right" type="submit">Send</button>
 			</div>
 		</div>
 	</div>
