--- a/html/Views/miscellaneous/sign_in_modal.phtml
+++ b/html/Views/miscellaneous/sign_in_modal.phtml
@@ -22,7 +22,7 @@
 							</label>
 						</div>
 						<div class="col-sm-6 text-right">
-							<a class="link">Did you forget your password?</a>
+							<a href="/forgotten-password" class="link">Did you forget your password?</a>
 						</div>
 					</div>
 				</div>
