--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,6 +1,9 @@
 <div class="homepage-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<?php //phpinfo(); ?>
+		<div id="alert-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
 				<h1>Welcome</h1>
@@ -8,30 +11,29 @@
 				<h2>A place to share your code</h2>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-sm-pull-6">
-				<form action="/sign-up" method="post" id="sign-up-form">
+				<form class="validate" action="/sign-up" method="post" id="sign-up-form">
 					<h2>Sign up</h2>
 					<div class="form-group" id="email-wrapper">
-						<input class="form-control" type="email" name="email" placeholder="email" required>
+						<input class="form-control" type="email" name="email" id="email-input" placeholder="email" required>
 					</div>
 					<div class="form-group" id="username-wrapper">
-						<input class="form-control" type="text" name="username" placeholder="username" required>
+						<input class="form-control" type="text" name="username" id="username-input" placeholder="username" required>
 					</div>
 					<div class="form-group" id="password-wrapper">
-						<input class="form-control" type="password" name="password" placeholder="password" required>
+						<input class="form-control" type="password" name="password" id="password-input" placeholder="password" required>
 					</div>
 					<div class="form-group" id="password-again-wrapper">
-						<input class="form-control" type="password" name="password-again" placeholder="password again" required>
+						<input class="form-control" type="password" name="password-again" id="password-again-input" placeholder="password again" required>
 					</div>
 					<div class="row">
 						<div class="col-xs-8">
-							<div class="alert alert-danger"></div>
+							<div class="alert alert-danger alert-box"></div>
 						</div>
 						<div class="col-xs-4">
 							<button type="submit" class="btn btn-default pull-right">Sign up</button>		
 						</div>
 					</div>
 				</form>
-				<script src="Includes/javascript/sign-up-form.js"></script>
 			</div>
 		</div>
 		<div class="col-sm-12 homepage-img-wrap">
