--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -1,16 +1,14 @@
-<link rel="stylesheet" href="Includes/Croppie/croppie.css" />
-<script src="Includes/Croppie/croppie.min.js"></script>
-<script src="Includes/javascript/avatar-n-cropper.js"></script>
+
 <div  class="profile-wrapper">
 	<div class="container">
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		<h1>Your profile</h1>
 		<div class="row">
-			<div class="col-md-4">
-				<div class="thumbnail panel panel-default" id="profile-info">
+			<div class="col-sm-4 col-md-3" id="profile-info">
+				<div class="panel panel-default">
 					<div id="avatar-wrapper">
 						<div class="img-group">
-							<img class="img-responsive" id="avatar250" src="<?=$avatarPath?>" tittle="<?=$username?> avatar" alt="<?=$username?> avatar">
+							<img id="avatar250" src="<?=$user->getAvatar250()?>" tittle="<?=$user->getUsername()?> avatar" alt="<?=$user->getUsername()?> avatar">
 							<button class="fa fa-pencil-square-o img-button" id="img-edit-button"></button>
 						</div>
 						<div id="croppbox"></div>
@@ -22,19 +20,22 @@
 						</form>
 					</div>
 					<div class="panel-body">
-						<h3>
-							<?php if(!$name && !$surname): ?><?=$username?>
-							<?php else: ?>
-								<?php if($name): ?><?=$name?><?php endif ?>
-								<?php if($surname): ?><?=$surname?><?php endif ?>
-							<?php endif ?>
-						</h3>
-						<p><?=$email?></p>
-						<button class="btn btn-info btn-block">Settings</button>
+						<?=($user->getName() || $user->getSurname() ? "<h3>".$user->getName().($user->getName() && $user->getSurname() ? " ": null).$user->getSurame()."</h3>": null)?>
+						<h3><?=$user->getUsername()?></h3>
+						<p><?=$user->getEmail()?></p>
+						<a href="/settings" class="btn btn-info btn-block">Settings</a>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-8">
+			<div class="col-sm-8 col-md-9">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h2>Your packs</h2>
+					</div>
+					<div class="panel-body">
+						<p>You dont have any packs yet.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
