--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -11,6 +11,11 @@
 		<link href="Includes/styles/style.css" rel="stylesheet" type="text/css">
 		<script src="Includes/jquery-2.1.3./jquery-2.1.3.js"></script>
 		<script src="Includes/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="Includes/Croppie/croppie.css" />
+		<script src="Includes/Croppie/croppie.min.js"></script>
+		<script src="Includes/javascript/validation.js"></script>
+		<script src="Includes/javascript/avatar-n-cropper.js"></script>
+		<script src="Includes/javascript/img-group-button.js"></script>
 	</head>
 	<body>
 		<header>
@@ -21,9 +26,21 @@
 							<img class="logo" src="Includes/images/starling_white.svg" alt="logo">
 						</a>
 						<ul class="nav navbar-nav visible-xs">
-							<li>
-								<a class="nav navbar-nav visible-xs pull-right" href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
-							</li>
+							<?php if($userLogged): ?>
+								<li class="dropdown pull-right">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><?=$user->getUsername()?><img class="avatar" src="<?=$user->getAvatar40()?>" tittle="<?=$user->getUsername()?> avatar" alt="<?=$user->getUsername()?> avatar"></a>
+									<ul class="dropdown-menu">
+										<li><a href="/profile">Profile<i class="fa fa-user"></i></a></li>
+										<li><a href="/settings">Settings<i class="fa fa-cog"></i></a></li>
+										<li class="divider"></li>
+										<li><a href="/sign-out">Sign out<i class="fa fa-sign-out"></i></a></li>
+									</ul>
+								</li>
+							<?php else: ?>
+								<li>	
+									<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
+								</li>
+							<?php endif ?>
 						</ul>
 					</div>
 					<ul class="nav navbar-nav">
@@ -41,13 +58,21 @@
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right hidden-xs">
-						<li>
-							<?php if($userLogged): ?>
-								<a href="/sign-out"><?=$username?></a>
-							<?php else: ?>
+						<?php if($userLogged): ?>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown"><?=$user->getUsername()?><img class="avatar" src="<?=$user->getAvatar40()?>" tittle="<?=$user->getUsername()?> avatar" alt="<?=$user->getUsername()?> avatar"></a>
+								<ul class="dropdown-menu">
+									<li><a href="/profile">Profile<i class="fa fa-user"></i></a></li>
+									<li><a href="/settings">Settings<i class="fa fa-cog"></i></a></li>
+									<li class="divider"></li>
+									<li><a href="/sign-out">Sign out<i class="fa fa-sign-out"></i></a></li>
+								</ul>
+							</li>
+						<?php else: ?>
+							<li>	
 								<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
-							<?php endif ?>
-						</li>
+							</li>
+						<?php endif ?>
 					</ul>
 				</div>
 			</nav>
