--- a/html/Views/miscellaneous/flash_message.phtml
+++ b/html/Views/miscellaneous/flash_message.phtml
@@ -1,6 +1,8 @@
 <?php foreach($flash_messages as $message): ?>
-	<div class="alert alert-<?=$message['type']?> alert-dismissible" role="alert">
-	  	<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
-		<?=$message['message']?>
+	<div class="row">
+		<div class="alert alert-<?=$message['type']?> alert-dismissible" role="alert">
+		  	<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
+			<?=$message['message']?>
+		</div>
 	</div>
 <?php endforeach ?>
