--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -17,7 +17,9 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
 html{
 	min-width: 320px;
 }
-
+section .container{
+	padding-top: 20px;
+}
 
 /*text*/
 *{
@@ -30,6 +32,7 @@ h1, h2, h3, p{
 h1{
 	font-size: 32px;
 	font-weight: bold;
+	margin-top: 0px;
 }
 h2{
 	font-size: 22px;
@@ -176,18 +179,27 @@ p{
 .form-control:focus{
 	outline: none !important;
 	border: 1px solid #178599;
-	/*box-shadow: 0px 0px 4px #046d81 !important;*/
+	box-shadow: none;
 }
 .has-error input, .has-error input:focus{
 	outline: none !important;
 	border: 1px solid #D23702 !important;
 	box-shadow: none !important;
-	/*box-shadow: 0px 0px 4px #D23702 !important;*/
+	box-shadow: none;
 }
 .has-success input, .has-success input:focus{
 	border: 1px solid #c0cf02 !important;
 	box-shadow: none !important;
-	/*box-shadow: 0px 0px 4px #c0cf02 !important;*/
+	box-shadow: none;
+}
+
+.form-group{
+	.help-block{
+		line-height: 15px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+		color: #666666;
+	}
 }
 
 /*----*/
@@ -229,10 +241,6 @@ p{
 
 /*modal*/
 .modal{
-	.form-control{
-		padding: 4px 10px;
-		font-size: 18px;
-	}
 }
 .modal-content{
 	border-radius: 4px;
@@ -279,7 +287,7 @@ p{
 	}
 	.dropdown-menu{
 		box-shadow: none;
-		border: 1px solid #999999;
+		border-top: 1px solid #999999;
 		background-color: black;
 		li{
 			a{
@@ -342,15 +350,6 @@ p{
 		border-top-left-radius: 4px;
 	}
 }
-.cr-slider-wrap{
-	margin-top: 16px !important;
-}
-.croppie-container{
-	padding: 0px !important;
-}
-.cr-viewport{
-	border: 0px !important;
-}
 
 /*----*/
 
@@ -371,19 +370,25 @@ header{
 	.form-control{
 		padding: 5px 10px;
 		font-size: 16px;
-		color: black;
+		color: #bbbbbb;
 		box-shadow: none;
-		@include placeholder{
+		/*@include placeholder{
 			color: #666666;
-		}
+		}*/
+	}
+	.form-control:focus{
+		outline: none !important;
+		border: 0px;
+		box-shadow: none;
 	}
 	.form-control, .btn{
-		border: 1px solid #666666;
+		border: 0px;
+		background-color: #333333;
 		border-radius: 4px;
 		height: 32px;
 	}
 	.btn{
-		border: 1px solid #666666;
+		border-left: 0px;
 		font-size: 18px;
 		padding-top: 2px;
 		color: #666666;
@@ -539,7 +544,7 @@ footer{
 /*----*/
 
 /*profile*/
-.profile-wrapper{
+.user-wrapper{
 	#img-form-wrapper{
 		display: none;
 		border-bottom: 10px solid #f8f8f8;
@@ -554,8 +559,14 @@ footer{
 		border: 0px !important;
 	}
 	@media screen and (max-width: 767px){
-		#profile-info{
-			max-width: 320px;
+		#user-info{
+		}
+		#img-form-wrapper{
+			padding-top: 0px;
+			border-bottom: 0px;
+			.btn{
+				margin-top: 10px;
+			}
 		}
 	}
 }
@@ -582,10 +593,35 @@ footer{
 	#img-form-wrapper{
 		display: none;
 	}
+	.cr-slider-wrap{
+		margin-top: 16px !important;
+	}
+	.croppie-container{
+		padding: 0px !important;
+	}
+	.cr-viewport{
+		border: 0px !important;
+	}
 	@media screen and (max-width: 767px){
 		#avatar-settings{
 			max-width: 320px;
 		}
+	}
+}
+
+/*----*/
+
+
+/*newPack*/
+
+.new-pack-wrapper{
+	textarea[name="description"]{
+		resize: vertical;
+		min-height: 105px;
+	}
+	textarea[name="tags"]{
+		resize: vertical;
+		min-height: 60px;
 	}
 }
 
