--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -1,29 +1,41 @@
 
-<div  class="profile-wrapper">
+<div  class="user-wrapper">
 	<div class="container">
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		<h1>Your profile</h1>
 		<div class="row">
-			<div class="col-sm-4 col-md-3" id="profile-info">
-				<div class="panel panel-default">
-					<div id="avatar-wrapper">
-						<div class="img-group">
-							<img id="avatar250" src="<?=$user->getAvatar250()?>" tittle="<?=$user->getUsername()?> avatar" alt="<?=$user->getUsername()?> avatar">
-							<button class="fa fa-pencil-square-o img-button" id="img-edit-button"></button>
+			<div class="col-sm-4 col-md-3">
+				<div class="panel panel-default" id="user-info">
+					<div class="row">
+						<div class="col-xs-4 col-sm-12">
+							<div id="avatar-wrapper">
+								<div class="img-group">
+									<img id="avatar250" src="<?=$loggedUser->getAvatar250()?>" tittle="<?=$loggedUser->getUsername()?> avatar" alt="<?=$loggedUser->getUsername()?> avatar">
+									<button class="fa fa-pencil-square-o img-button" id="img-edit-button"></button>
+								</div>
+								<div id="croppbox"></div>
+								<div id="img-form-wrapper" class="panel-body">
+									<form action="/avatar-update" method="POST" enctype="multipart/form-data" id="upload-img-form">
+										<div class="row">
+											<div class="col-sm-4">
+												<div class="btn btn-default btn-block btn-upload"><i class="fa fa-upload"></i><input type="file" accept="image/*" name="avatar-input" required></div>
+											</div>
+											<div class="col-sm-offset-2 col-sm-6">
+												<button class="btn btn-default pull-right btn-block" type="submit">Save</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
 						</div>
-						<div id="croppbox"></div>
-					</div>
-					<div id="img-form-wrapper" class="panel-body">
-						<form action="/avatar-update" method="POST" enctype="multipart/form-data" id="upload-img-form">
-							<div class="btn btn-default btn-upload"><i class="fa fa-upload"></i><input type="file" accept="image/*" name="avatar-input" required></div>
-							<button class="btn btn-default pull-right" type="submit">Save</button>
-						</form>
-					</div>
-					<div class="panel-body">
-						<?=($user->getName() || $user->getSurname() ? "<h3>".$user->getName().($user->getName() && $user->getSurname() ? " ": null).$user->getSurname()."</h3>": null)?>
-						<h3><?=$user->getUsername()?></h3>
-						<p><?=$user->getEmail()?></p>
-						<a href="/settings" class="btn btn-info btn-block">Settings</a>
+						<div class="col-xs-8 col-sm-12">
+							<div class="panel-body">
+								<?=($loggedUser->getName() || $loggedUser->getSurname() ? "<h3>".$loggedUser->getName().($loggedUser->getName() && $loggedUser->getSurname() ? " ": null).$loggedUser->getSurname()."</h3>": null)?>
+								<h3><?=$loggedUser->getUsername()?></h3>
+								<p><?=$loggedUser->getEmail()?></p>
+								<a href="/settings" class="btn btn-info btn-block settings-button">Settings</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
