--- a/html/Views/miscellaneous/flash_message.phtml
+++ b/html/Views/miscellaneous/flash_message.phtml
@@ -1,8 +1,10 @@
 <?php foreach($flash_messages as $message): ?>
 	<div class="row">
-		<div class="alert alert-<?=$message['type']?> alert-dismissible" role="alert">
-		  	<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
-			<?=$message['message']?>
+		<div class="col-xs-12">
+			<div class="alert alert-<?=$message['type']?> alert-dismissible" role="alert">
+			  	<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
+				<?=$message['message']?>
+			</div>
 		</div>
 	</div>
 <?php endforeach ?>
