--- a/html/Views/miscellaneous/sign_in_modal.phtml
+++ b/html/Views/miscellaneous/sign_in_modal.phtml
@@ -28,12 +28,9 @@
 				</div>
 				<div class="modal-footer">
 					<a class="btn btn-info pull-left" href="/forgotten-password">Create new acount</a>
-					<button type="submit" class="btn btn-default">Sign in</button>
+					<button type="submit" class="btn btn-success">Sign in</button>
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
-<?php if(isset($showSignInModal) && $showSignInModal): ?>
-	<script>$('#sign-in-modal').modal('show')</script>
-<?php endif ?>
