--- a/html/Includes/styles/style.css
+++ b/html/Includes/styles/style.css
@@ -22,11 +22,14 @@ h1, h2, h3, p {
 h1 {
   font-size: 32px;
   font-weight: bold;
-  margin-top: 0px; }
+  margin-top: 0px;
+  margin-bottom: 15px; }
 
 h2 {
   font-size: 22px;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 0px;
+  margin-bottom: 10px; }
 
 h3 {
   font-size: 16px;
@@ -43,6 +46,18 @@ p {
 .link:hover {
   color: #014450;
   text-decoration: none; }
+
+hr {
+  border-top: 2px solid #f0f0f0; }
+
+.text-center {
+  text-align: center !important; }
+
+.text-left {
+  text-align: left !important; }
+
+.text-right {
+  text-align: right !important; }
 
 /*----*/
 /*buttons*/
@@ -215,7 +230,7 @@ p {
 .panel {
   border-radius: 4px;
   box-shadow: none; }
-  .panel h2 {
+  .panel .panel-heading h2 {
     margin: 0px; }
 
 .panel-default {
