--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<base href="../">
 		<meta charset="utf-8">
 		<meta keywords="<?=$keywords?>" description="<?=$description?>">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><?=$title?></title>
-		<link href="Includes/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="Includes/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		<link href="Includes/styles/style.css" rel="stylesheet" type="text/css">
-		<script src="Includes/jquery-2.1.3./jquery-2.1.3.js"></script>
-		<script src="Includes/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="Includes/Croppie/croppie.css" />
-		<script src="Includes/Croppie/croppie.min.js"></script>
-		<script src="Includes/javascript/print_r.js"></script>
-		<script src="Includes/javascript/validator.js"></script>
-		<script src="Includes/javascript/avatar-n-cropper.js"></script>
-		<script src="Includes/javascript/img-group-button.js"></script>
-		<script src="Includes/javascript/application.js"></script>
+		<link href="/Includes/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/Includes/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="/Includes/styles/style.css" rel="stylesheet" type="text/css">
+		<script src="/Includes/jquery-2.1.3./jquery-2.1.3.js"></script>
+		<script src="/Includes/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="/Includes/Croppie/croppie.css" />
+		<script src="/Includes/Croppie/croppie.min.js"></script>
+		<script src="/Includes/javascript/print_r.js"></script>
+		<script src="/Includes/javascript/validator.js"></script>
+		<script src="/Includes/javascript/avatar-n-cropper.js"></script>
+		<script src="/Includes/javascript/img-group-button.js"></script>
+		<script src="/Includes/javascript/application.js"></script>
 	</head>
 	<body>
 		<header>
@@ -25,7 +24,7 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="/home">
-							<img class="logo" src="Includes/images/starling_white.svg" alt="logo">
+							<img class="logo" src="/Includes/images/starling_white.svg" alt="logo">
 						</a>
 						<ul class="nav navbar-nav visible-xs">
 							<?php if($loggedUser): ?>
@@ -80,7 +79,7 @@
 			</nav>
 		</header>
 
-		<?php $this->viewFile('Views/miscellaneous/sign_in_modal.phtml'); ?>
+		<?php $this->viewFile('/Views/miscellaneous/sign_in_modal.phtml'); ?>
 
 		<section>
 			<?php $this->viewToTemplate(); ?>
