--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -8,24 +8,17 @@
 	<div class="alert alert-success alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 	<div class="alert alert-danger alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 	<div class="alert alert-info alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
-	<form>
-		<div class="form-group">
-			<input type="text" class="form-control" placeholder="placeholder" />
-		</div>
-		<div class="form-group has-error">
-			<input type="text" class="form-control" placeholder="placeholder" />
-		</div>
-		<div class="checkbox">
-			<label>
-				<input type="checkbox" name="rememberMe" value="1">
-				<i class="fa checkbox-button"></i>
-				Remember me
-			</label>
-		</div>
-		<div class="form-group has-success">
-			<input type="text" class="form-control" placeholder="placeholder" />
-		</div>
+	
+	<form action="/update-pack-permissions" method="POST">
+		<input type="text" name="packId"/>
+		<input type="password" name="authorizationPassword"/>
+		<input type="text" name="user0username"/>
+		<input type="checkbox" name="user0view" value="1">
+		<input type="checkbox" name="user0edit" value="1">
+		<input type="checkbox" name="user0remove" value="1">
+		<input type="submit">
 	</form>
+
 	<button class="btn btn-default">Button</button>
 	<button class="btn btn-danger">Button</button>
 	<button class="btn btn-success">Button</button>
