--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -12,12 +12,43 @@
 	<form action="/update-pack-permissions" method="POST">
 		<input type="text" name="packId"/>
 		<input type="password" name="authorizationPassword"/>
+		<br />
 		<input type="text" name="user0username"/>
 		<input type="checkbox" name="user0view" value="1">
 		<input type="checkbox" name="user0edit" value="1">
 		<input type="checkbox" name="user0remove" value="1">
+		<br />
+		<input type="text" name="user1username"/>
+		<input type="checkbox" name="user1view" value="1">
+		<input type="checkbox" name="user1edit" value="1">
+		<input type="checkbox" name="user1remove" value="1">
+		<br /> 
 		<input type="submit">
 	</form>
+	<form action="/create/group" method="POST">
+		<input type="text" name="name"/>
+		<input type="text" name="description"/>
+		<input type="checkbox" name="private" value="1">
+		<br /> 
+		<input type="submit">
+	</form>
+
+	<form id="adduserform"> 
+		<input type="text" name="user[0][username]" placeholder="username"/>
+		<input type="submit">
+	</form>
+
+	<script>
+		$("#adduserform").submit(function(event){
+			event.preventDefault();
+			$.ajax({
+				type: 'POST',
+				url: "/group/1/remove-users",
+				data: $(this).serialize(),
+				dataType : "json",
+			});
+		});
+	</script>
 
 	<button class="btn btn-default">Button</button>
 	<button class="btn btn-danger">Button</button>
